--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "openai": "^3.2.1"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8"
+  },
+  "scripts": {
+    "dev": "node_modules/nodemon/bin/nodemon.js --watch . index.js",
+    "format": "node_modules/prettier/bin-prettier.js --write index.{js,html}"
+   }
 }
